# monviso

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  examples.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.py
api/: index.html
docs/: algorithms.rst  api.md  conf.py  index.md  index.rst  requirements.txt
docs/examples/: distributionally-robust-game.rst  feasibility-problem-nb.ipynb  feasibility-problem.rst  index.rst  linear-complementarity-nb.ipynb  linear-complementarity.rst  linear-quadratic-game-nb.ipynb  linear-quadratic-game.rst  logistic-regression-nb.ipynb  logistic-regression.rst  markov-decision-process-nb.ipynb  markov-decision-process.rst  quickstart-nb.ipynb  skew-symmetric-nb.ipynb  skew-symmetric.rst  utils.py  zero-sum-game-nb.ipynb  zero-sum-game.rst
docs/functions/: monvi.core.VI.__init__.rst  monvi.core.VI.cfogda.rst  monvi.core.VI.eag.rst  monvi.core.VI.fbf.rst  monvi.core.VI.fogda.rst  monvi.core.VI.frb.rst  monvi.core.VI.hgraal_1.rst  monvi.core.VI.hgraal_2.rst  monvi.core.VI.solution.rst  monviso.VI.agraal.rst  monviso.VI.arg.rst  monviso.VI.cfogda.rst  monviso.VI.eag.rst  monviso.VI.eg.rst  monviso.VI.fbf.rst  monviso.VI.fogda.rst  monviso.VI.frb.rst  monviso.VI.graal.rst  (+21 more)
examples/: distributionally-robust-game.py  feasibility-problem.py  linear-complementarity.py  linear-quadratic-game.py  logistic-regression.py  markov-decision-process.py  quickstart.py  skew-symmetric.py  utils.py  zero-sum-game.py
monvi/: __init__.py  core.py
monviso/: __init__.py  core.py
search/: search_index.json
(+11 files in other folders)
