[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monviso"
authors = [
  { name="Nicola Mignoni", email="nicola.mignoni@poliba.it" },
]
description = "A Python package for solving monotone variational inequalities."
keywords = [
  "variational inequalities",
  "optimization",
  "game theory",
  "control theory",
  "cvxpy",
  "complementarity problem",
  "equilibrium problem"
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
  "numpy",
  "cvxpy"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",    
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["monviso*"]

[tool.setuptools.dynamic]
version = { attr = "monviso.__version__" }

[project.urls]
Homepage = "https://github.com/nicomignoni/monviso"
Documentation = "https://nicomignoni.github.io/monviso/"
